13th Experimental updates made, maps fixed new bugs to fix better controls with better mouse controls cleaned up code, optimized performance, added hashnodes and spatial codes  (11th update overall)